@@ -4,6 +4,7 @@ intended v0.1.1
 + implement dom.waitForImage
 + implement Component#remove
 + create NODE class generators, such that you can define your own NODEs, e.g. BUTTON = NODES.createGenerator('button')
++ make attribute handling extensible, such that you can define your own attribute handlers, e.g. DIV({ data:dataObject })
 
 v0.1.0
 + implement ui.dom
